_sass/3-sections/_projects.sass
.projects

  &__categories
    display: flex
    justify-content: center
    flex-wrap: wrap
    margin-bottom: calc(6.4rem - 1em)

  &__category
    border: 1px solid $base-light-font-color
    text-transform: uppercase
    border-radius: 4px
    padding: .4em 1em
    font-size: 1.4rem
    cursor: pointer
    +margin(null .5em 1em .5em)
    color: $base-light-font-color

    &--active
      border: 1px solid $base-font-color
      background: $base-font-color
      color: white

    &:not(.projects__category--active):hover
      border: 1px solid $base-font-color
      color: $base-font-color
      +transition(all, .3s, linear, 0)

  &__container
    +grid-collapse($projects-grid)
    +grid-container

  &__card
    +grid-column(12, $projects-grid)
    border: 2px solid lightgray
    margin-bottom: 20px
    box-sizing: border-box

    +grid-media($grid-small)
      +grid-column(6, $projects-grid)

    +grid-media($grid-large)
      +grid-column(4, $projects-grid)

  &__body
    height: 16rem
    display: flex
    align-items: center
    justify-content: center
    border-bottom: 2px solid #d3d3d3
    box-sizing: border-box
    position: relative

    &:hover .projects__overlay
      opacity: 1
      +transition(all, .3s, linear, 0)

  &__overlay
    position: absolute
    width: 100%
    height: 100%
    background: rgba(0, 0, 0, .4)
    justify-content: center
    align-items: center
    display: flex
    opacity: 0

  &__url
    +size(7.2rem)
    background: $main-color
    color: white
    border-radius: 100%
    line-height: 7.2rem
    text-align: center
    font-size: 3rem
    +prefixer(box-shadow, -2px 2px 2px 0px rgba(0,0,0,0.3), webkit moz o spec)

    &:hover
      background: darken($main-color, 10%)
      +transition(background, .2s, linear, 0)

  &__image
    max-width: calc(100% - 4em)
    max-height: calc(100% - 2em)

  &__title
    padding: 1em
    text-transform: uppercase
    font-weight: 400
    text-align: center
    +ellipsis
    display: block

  &__pagination
    margin-top: 20px

    ul
      display: flex
      justify-content: center

      li
        +size(3.6rem)
        line-height: 3.6rem
        text-align: center
        font-weight: 400
        border-radius: 4px

        &.active
          background: $pag-active-background
          color: $pag-active-color

        &.disabled
          background: $pag-disabled-background
          color: $pag-disabled-color

        a
          background: $pag-item-background
          color: $pag-item-color
          text-decoration: none

